Closed Bug 1647828 Opened 4 years ago Closed 4 years ago

AXPress is available on all nodes

Categories

(Core :: Disability Access APIs, defect, P2)

All
macOS
defect

Tracking

()

RESOLVED FIXED
mozilla79
Tracking Status
firefox-esr68 --- unaffected
firefox-esr78 --- fixed
firefox77 --- unaffected
firefox78 --- fixed
firefox79 --- fixed

People

(Reporter: eeejay, Assigned: eeejay)

References

(Regression)

Details

(Keywords: regression, Whiteboard: [mac2020_1])

Attachments

(1 file)

We aren't using the right selector (moxPerformPress) to filter out non-acitonable items. This makes all items pressable.

Regressed by: 1641644
Has Regression Range: --- → yes
Assignee: nobody → eitan
Status: NEW → ASSIGNED
Pushed by eisaacson@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/eee481f8258e Block moxPerformPress selector on non-actionable nodes. r=morgan
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla79

Set release status flags based on info from the regressing bug 1641644

Comment on attachment 9158652 [details]
Bug 1647828 - Block moxPerformPress selector on non-actionable nodes. r?morgan

Beta/Release Uplift Approval Request

  • User impact if declined: All nodes will appear to be clickable with VoiceOver
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): This is a one line bug and a small fix.
  • String changes made/needed:
Attachment #9158652 - Flags: approval-mozilla-beta?
Attachment #9158652 - Flags: approval-mozilla-beta? → approval-mozilla-release?

Comment on attachment 9158652 [details]
Bug 1647828 - Block moxPerformPress selector on non-actionable nodes. r?morgan

a11y regression fix, approved for 78 rc2.

Attachment #9158652 - Flags: approval-mozilla-release? → approval-mozilla-release+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: