Bug 1647828 - Block moxPerformPress selector on non-actionable nodes. r=morgan

Differential Revision: https://phabricator.services.mozilla.com/D80712